WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
183678
URLSchemeHandler.Basic API test fails with async policy delegates
https://bugs.webkit.org/show_bug.cgi?id=183678
Summary
URLSchemeHandler.Basic API test fails with async policy delegates
Chris Dumez
Reported
2018-03-15 14:39:42 PDT
URLSchemeHandler.Basic API test fails with async policy delegates.
Attachments
Patch
(10.52 KB, patch)
2018-03-15 14:44 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2018-03-15 14:44:00 PDT
Created
attachment 335889
[details]
Patch
WebKit Commit Bot
Comment 2
2018-03-16 09:11:59 PDT
Comment on
attachment 335889
[details]
Patch Clearing flags on attachment: 335889 Committed
r229666
: <
https://trac.webkit.org/changeset/229666
>
WebKit Commit Bot
Comment 3
2018-03-16 09:12:00 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2018-03-16 09:13:23 PDT
<
rdar://problem/38545984
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug