Source/WebKit/WebProcess/WebPage/WebURLSchemeTaskProxy.cpp
@@ -70,29 +70,45 @@ void WebURLSchemeTaskProxy::didPerformRedirection(WebCore::ResourceResponse&& re
         return;
     
     auto completionHandler = [this, protectedThis = makeRef(*this), originalRequest = request] (ResourceRequest&& request) {
-        m_waitingForRedirectCompletionHandler = false;
+        m_waitingForCompletionHandler = false;
         // We do not inform the UIProcess of WebKit's new request with the given suggested request.
         // We do want to know if WebKit would have generated a request that differs from the suggested request, though.
         if (request.url() != originalRequest.url())
             WTFLogAlways("Redirected scheme task would have been sent to a different URL.");
+
+        processNextPendingTask();
     };
     
-    if (m_waitingForRedirectCompletionHandler)
-        WTFLogAlways("Received redirect during previous redirect processing.");
-    m_waitingForRedirectCompletionHandler = true;
+    if (m_waitingForCompletionHandler) {
+        WTFLogAlways("Received redirect during previous redirect processing, queuing it.");
+        queueTask([this, protectedThis = makeRef(*this), redirectResponse = WTFMove(redirectResponse), request = WTFMove(request)]() mutable {
+            didPerformRedirection(WTFMove(redirectResponse), WTFMove(request));
+        });
+        return;
+    }
+    m_waitingForCompletionHandler = true;
 
     m_coreLoader->willSendRequest(WTFMove(request), redirectResponse, WTFMove(completionHandler));
 }
 
 void WebURLSchemeTaskProxy::didReceiveResponse(const ResourceResponse& response)
 {
-    if (m_waitingForRedirectCompletionHandler)
-        WTFLogAlways("Received response during redirect processing.");
+    if (m_waitingForCompletionHandler) {
+        WTFLogAlways("Received response during redirect processing, queuing it.");
+        queueTask([this, protectedThis = makeRef(*this), response] {
+            didReceiveResponse(response);
+        });
+        return;
+    }
     
     if (!hasLoader())
         return;
 
-    m_coreLoader->didReceiveResponse(response, nullptr);
+    m_waitingForCompletionHandler = true;
+    m_coreLoader->didReceiveResponse(response, [this, protectedThis = makeRef(*this)] {
+        m_waitingForCompletionHandler = false;
+        processNextPendingTask();
+    });
 }
 
 void WebURLSchemeTaskProxy::didReceiveData(size_t size, const uint8_t* data)
@@ -100,13 +116,31 @@ void WebURLSchemeTaskProxy::didReceiveData(size_t size, const uint8_t* data)
     if (!hasLoader())
         return;
 
+    if (m_waitingForCompletionHandler) {
+        WTFLogAlways("Received data during response processing, queuing it.");
+        Vector<uint8_t> dataVector;
+        dataVector.append(data, size);
+        queueTask([this, protectedThis = makeRef(*this), dataVector = WTFMove(dataVector)] {
+            didReceiveData(dataVector.size(), dataVector.data());
+        });
+        return;
+    }
+
     m_coreLoader->didReceiveData(reinterpret_cast<const char*>(data), size, 0, DataPayloadType::DataPayloadBytes);
+    processNextPendingTask();
 }
 
 void WebURLSchemeTaskProxy::didComplete(const ResourceError& error)
 {
     if (!hasLoader())
         return;
+
+    if (m_waitingForCompletionHandler) {
+        queueTask([this, protectedThis = makeRef(*this), error] {
+            didComplete(error);
+        });
+        return;
+    }
 
     if (error.isNull())
         m_coreLoader->didFinishLoading(NetworkLoadMetrics());
@@ -122,6 +156,12 @@ bool WebURLSchemeTaskProxy::hasLoader()
         m_coreLoader = nullptr;
 
     return m_coreLoader;
+}
+
+void WebURLSchemeTaskProxy::processNextPendingTask()
+{
+    if (!m_queuedTasks.isEmpty())
+        m_queuedTasks.takeFirst()();
 }
 
 } // namespace WebKit
